--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
     <body>
 
         <h1>Welcome to my World</h1>
-        <p>This is a paragraph.</p>
+        <p>This is my super awesome website.</p>
 
     </body>
 </html>
